# llm-training

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MLX_MIGRATION.md  README.md  cleanup.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
configs/: deepseek-instruct-optimized.yaml  gpt2-medium-backup.yaml  gpt2-medium-balanced.yaml
docs/: LINTING.md
examples/configs/: medium_model.yaml  small_model.yaml
examples/sample_data/: advanced_features.md  api_reference.mdx  getting_started.md
scripts/: check_setup.py  convert_npz_to_safetensors.py  lint_all.sh  quick_train.py
src/llm_training/: __init__.py  cli.py  config.py  dataset.py  evaluation.py  finetuning.py  training.py  utils.py
tests/: __init__.py  test_config.py  test_dataset.py  test_utils.py
